2012/06/20 - Add a search command
2012/05/05 - Allow descriptions to be set from the CLI