@@ -1,3 +1,3 @@
 class Snipper
-  VERSION="0.0.4"
+  VERSION="0.0.5"
 end
