@@ -1,2 +1,3 @@
+2012/08/31 - Add the ability to capture the output from a command
 2012/06/20 - Add a search command
 2012/05/05 - Allow descriptions to be set from the CLI
